# pbip-model-forge

./: CONTRIBUTING.md  MARKETING.md  README.md  RELEASE-NOTES.md  pyproject.toml
.claude/skills/create-sample-model/: SKILL.md
.claude/skills/validate-and-expand/: SKILL.md
docs/: README.md  artifact-checklist.md  entered-data-encoding.md  index.md
docs/explanation/: entered-data-encoding.md  spec-as-source-of-truth.md  spec-for-data-engineers.md  will-it-open.md
docs/how-to/: add-a-measure-dimension-relationship.md  build-a-model-from-a-prompt.md  expand-a-model-and-keep-it-valid.md  hand-the-spec-to-a-data-engineer.md  install-and-verify-tmdl-preflight.md
docs/reference/: artifact-checklist.md  cli.md  spec-schema.md
docs/tutorials/: getting-started.md
scripts/: build_physio.py  build_template.py
src/pbip_model_forge/: __init__.py  blank_report.py  build_model.py  cli.py  enter_data.py
template/: Model.pbip
template/Model.Report/: .platform  definition.pbir
template/Model.SemanticModel/: .platform
template/Model.SemanticModel/definition/: model.tmdl  relationships.tmdl
template/Model.SemanticModel/definition/tables/: Customers.tmdl  Key Measures.tmdl  Products.tmdl  Sales.tmdl  __Calendar.tmdl
tests/: test_enter_data.py
